# rusoto-playground

./: Cargo.toml  README.md  book.toml
hoge/: test.txt
src/: chapter_1.md  dynamo.rs  main.rs
