[package]
name = "rusoto-playground"
version = "0.1.0"
authors = ["rchaser53 <tayoshizawa29@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1.25"
rusoto_core = "0.36.0"
rusoto_dynamodb = "0.36.0"
rusoto_s3 = "0.36.0"
rusoto_sqs = "0.36.0"
rusoto_sts = "0.36.0"
rusoto_credential = "0.15.0"
